force-app/main/default/objects/Financial_Reporting_Rule_Details__c/Financial_Reporting_Rule_Details__c.object-meta.xml
<CustomObject>
    <label>Financial Reporting Rule Detail</label>
    <nameField>
        <displayFormat>FRRD-{0000000}</displayFormat>
        <label>FRRD</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Reporting Rule Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>