force-app/main/default/objects/Financial_Reporting_Rule_Details__c/fields/Excluded_Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Service_Category__c</fullName>
    <label>Service Category (Excluded)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Centrally Held</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>