force-app/main/default/objects/Financial_Reporting_Rule_Details__c/fields/Financial_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Financial_Quarter__c</fullName>
    <label>Financial Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Financial Quarter</fullName>
            </value>
            <value>
                <fullName>2nd Financial Quarter</fullName>
            </value>
            <value>
                <fullName>3rd Financial Quarter</fullName>
            </value>
            <value>
                <fullName>4th Financial Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>