force-app/main/default/objects/Financial_Reporting_Rule_Details__c/fields/Financial_Reporting_Rule__c.field-meta.xml
<CustomField>
    <fullName>Financial_Reporting_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Reporting Rule</label>
    <referenceTo>Financial_Reporting_Rule__c</referenceTo>
    <relationshipLabel>Financial Reporting Rule Details</relationshipLabel>
    <relationshipName>Financial_Reporting_Rule_Details</relationshipName>
    <type>Lookup</type>
</CustomField>