force-app/main/default/objects/Financial_Reporting_Rule_Details__c/fields/Form_Types__c.field-meta.xml
<CustomField>
    <fullName>Form_Types__c</fullName>
    <description>This form types will be use in Single Form Validation to specifically define which validation rules are applicable</description>
    <label>Form Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type</valueSetName>
    </valueSet>
</CustomField>