force-app/main/default/objects/Financial_Reporting_Rule_Details__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Code</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Financial Reporting Rules</relationshipLabel>
    <relationshipName>Financial_Reporting_Rule_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>