force-app/main/default/objects/Financial_Reporting_Rule_Details__c/fields/GL_Code_Target__c.field-meta.xml
<CustomField>
    <fullName>GL_Code_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Code (Target)</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipName>Financial_Reporting_Rule_Detail1</relationshipName>
    <type>Lookup</type>
</CustomField>