force-app/main/default/objects/Financial_Reporting_Rule_Details__c/fields/Source_Column__c.field-meta.xml
<CustomField>
    <fullName>Source_Column__c</fullName>
    <label>Source Column</label>
    <length>50</length>
    <type>Text</type>
</CustomField>