force-app/main/default/objects/Financial_Reporting_Rule_Details__c/fields/Target_Column__c.field-meta.xml
<CustomField>
    <fullName>Target_Column__c</fullName>
    <label>Target Column</label>
    <length>50</length>
    <type>Text</type>
</CustomField>