force-app/main/default/objects/Financial_Reporting_Rule_Details__c/fields/Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rule__c</fullName>
    <label>Validation Rule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>