force-app/main/default/objects/Financial_Reporting_Rule_Details__c/recordTypes/Cross_Form_Validation.recordType-meta.xml
<RecordType>
    <fullName>Cross_Form_Validation</fullName>
    <active>true</active>
    <label>Cross Form Validation</label>
</RecordType>