force-app/main/default/objects/Financial_Reporting_Rule_Details__c/recordTypes/Duplicate_Value_Reference.recordType-meta.xml
<RecordType>
    <fullName>Duplicate_Value_Reference</fullName>
    <active>true</active>
    <label>Duplicate Value Reference</label>
</RecordType>