force-app/main/default/objects/Financial_Reporting_Rule_Details__c/recordTypes/Single_Form_Validation.recordType-meta.xml
<RecordType>
    <fullName>Single_Form_Validation</fullName>
    <active>true</active>
    <label>Single Form Validation</label>
</RecordType>