force-app/main/default/objects/Financial_Reporting_Rule_Details__c/recordTypes/Warning.recordType-meta.xml
<RecordType>
    <fullName>Warning</fullName>
    <active>true</active>
    <label>Warning</label>
</RecordType>